--- a/back/package.json
+++ b/back/package.json
@@ -13,9 +13,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "prisma:generate": "npx prisma generate --schema=back/database/prisma/schema.prisma",
-    "prisma:migrate": "npx prisma migrate --schema=back/databse/prisma/schema.prisma",
-    "prisma:studio": "npx prisma studio --schema=back/database/prisma/schema.prisma"
+    "prisma:generate": "npx prisma generate --schema=database/prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --schema=database/prisma/schema.prisma",
+    "prisma:studio": "npx prisma studio --schema=database/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
