--- a/back/package.json
+++ b/back/package.json
@@ -1,24 +1,34 @@
 {
+  "devDependencies": {
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
+    "@types/node": "^22.15.21",
+    "globals": "^16.2.0",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
+  },
   "name": "back",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc"
+    "dev:main": "tsx watch src/modules/router/app.ts",
+    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
+    "prisma:studio": "npx prisma studio --schema=prisma/schema.prisma",
+    "prisma:migrate-reset": "npx prisma migrate reset --schema=prisma/schema.prisma",
+    "prisma:pull": "npx prisma db pull --schema=prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@types/node": "^22.15.21",
-    "prisma": "^6.8.2",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
-  },
   "dependencies": {
-    "@prisma/client": "^6.8.2"
-  }
+    "@prisma/client": "^6.9.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "prisma": "^6.8.2",
+    "ts-node-dev": "^2.0.0",
+    "undici-types": "^6.21.0"
+  },
+  "description": ""
 }
