--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "globals": "^16.2.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0"
