--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
+    "dependencies": "^0.0.1",
     "express": "^5.1.0"
   }
 }
