--- a/back/package.json
+++ b/back/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "globals": "^16.2.0",
     "tsx": "^4.19.4",
@@ -25,7 +24,9 @@
   "dependencies": {
     "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
     "undici-types": "^6.21.0"
