Ambiente-Front-End

--- a/front/.gitignore
+++ b/front/.gitignore
@@ -29,10 +29,12 @@ package-lock.json
 node_modules
 
 # ignorando tsconfig.json
-tsconfig.json
 
 # ignorando .eslintrc.json
 .eslintrc.json
 
 # ignorando .prettierrc.json
 .prettierrc.json
+
+# ignorando  pnpm-lock.yaml
+pnpm-lock.yaml
