--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.3",
     "@types/node": "^22.15.21",
     "globals": "^16.2.0",
     "tsx": "^4.19.4",
