--- a/front/.devcontainer/devcontainer.json
+++ b/front/.devcontainer/devcontainer.json
@@ -1,30 +1,34 @@
 {
-  "name": "React + TypeScript Frontend",
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
-  "postCreateCommand": "npm install",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode",
-        "eamodio.gitlens",
-        "ms-vscode.vscode-typescript-tslint-plugin",
-        "ms-azuretools.vscode-docker"
-      ],
-      "settings": {
-        "editor.formatOnSave": true,
-        "eslint.format.enable": true,
-        "eslint.alwaysShowStatus": true,
-        "editor.codeActionsOnSave": {
-          "source.fixAll": true,
-          "source.fixAll.eslint": true
-        }
-      }
+  "name": "Laudinho Frontend",
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:20-bookworm",
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/pnpm:2": {
+      "version": "10.4.1"
     }
   },
-  "forwardPorts": [3000],
-  "remoteUser": "node",
-  "mounts": [
-    "source=${localEnv:HOME}/.npmrc,target=/home/node/.npmrc,type=bind,consistency=cached"
-  ]
+  "postCreateCommand": "pnpm install",
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "typescript.tsdk": "node_modules/typescript/lib",
+        "eslint.validate": ["javascript", "typescript", "typescriptreact"],
+        "editor.formatOnSave": true
+      },
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "dbaeumer.vscode-eslint",
+        "bradlc.vscode-tailwindcss",
+        "ms-vsliveshare.vsliveshare",
+        "yoavbls.pretty-ts-errors"
+      ]
+    }
+  },
+  "forwardPorts": [5173,3000],
+  "portsAttributes": {
+    "5173": {
+      "label": "Vite Dev Server",
+      "onAutoForward": "openPreview"
+    }
+  },
+  "remoteUser": "node"
 }
