--- a/back/package.json
+++ b/back/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.31",
     "globals": "^16.2.0",
     "tsx": "^4.19.4",
@@ -12,7 +13,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev:main": "tsx watch src/modules/router/app.ts",
+    "dev": "tsx watch src/modules/router/app.ts",
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate": "npx prisma migrate dev --schema=prisma/schema.prisma",
     "prisma:studio": "npx prisma studio --schema=prisma/schema.prisma",
@@ -25,15 +26,15 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
-    "dependencies": "^0.0.1",
-    "express": "^5.1.0",
-
     "cors": "^2.8.5",
+    "dependencies": "^0.0.1",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
+    "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
-    "undici-types": "^6.21.0",
-    "prisma": "^6.8.2"
+    "undici-types": "^6.21.0"
   },
   "description": ""
 }
