--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@prisma/client": "^6.9.0",
     "prisma": "^6.9.0"
+  },
+  "dependencies": {
+    "react-markdown": "^10.1.0"
   }
 }
