Todas as rotas de sede funcionando e endpoints documentados

--- a/back/package.json
+++ b/back/package.json
@@ -3,16 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-<<<<<<< laudinho-2-leandro
-"scripts": {
-  "dev": "tsx watch src/index.ts"
-},
-
-=======
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/modules/router/app.ts"
   },
->>>>>>> laudinho-2
   "keywords": [],
   "author": "",
   "license": "ISC",
