--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: Deploy para Servidor SSH
 
 on:
-    push:
-        branches: [ main ]
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
 
 jobs:
     deploy:
