--- a/back/package.json
+++ b/back/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "install": "^0.13.0",
+    "npm": "^11.4.2",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "ts-node-dev": "^2.0.0",
