--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.6",
@@ -38,7 +38,6 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.7",
-    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -49,19 +48,21 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
-    "pnpm": "^10.12.1",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.56.3",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-resizable-panels": "^3.0.2",
-    "react-router-dom": "^7.6.1",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -77,5 +78,10 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+  "overrides": {
+    "react-day-picker": {
+      "react": "^19.1.0"
+    }
+  }
 }
