--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,20 +64,25 @@ jobs:
             timeout: 300s
             command_timeout: 300s
             script: |
-              echo "Parando aplicação com pm2 (se estiver rodando)..."
-              pm2 delete laudinho-backend || true
+                  export NVM_DIR="$HOME/.nvm"
+                  [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+                  [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
 
-              echo "Instalando dependências..."
-              cd /dados/laudinho/backend
-              npm ci --only=production
+                  echo "Parando aplicação com pm2 (se estiver rodando)..."
+                  pm2 delete laudinho-backend || true
 
-              echo "Gerando cliente Prisma..."
-              npx prisma generate
+                  echo "Instalando dependências..."
+                  cd /dados/laudinho/backend
+                  npm ci --only=production
 
-              echo "Iniciando aplicação com pm2..."
-              pm2 start index.js --name laudinho-backend
+                  echo "Gerando cliente Prisma..."
+                  npx prisma generate
 
-              echo "Salvando configuração do pm2..."
-              pm2 save
+                  echo "Iniciando aplicação com pm2..."
+                  pm2 start index.js --name laudinho-backend
 
-              echo "Aplicação implantada com sucesso!"
+                  echo "Salvando configuração do pm2..."
+                  pm2 save
+
+                  echo "Aplicação implantada com sucesso!"
+
