--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "src/modules/router/app.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/modules/router/app.ts",
     "dev:main": "tsx watch src/modules/router/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
