--- a/front/package.json
+++ b/front/package.json
@@ -52,17 +52,16 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4",
-    "react-hot-toast": "^2.5.2",
-    "react-markdown": "^10.1.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -70,10 +69,13 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
