--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^6.10.1",
     "@types/express": "^5.0.3",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
