--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/laudinho?schema=laudo"
+DATABASE_URL="postgresql://postgres:32481024@localhost:5432/laudinho?schema=laudo"
 JWT_SECRET="sua_chave_secreta_aqui"
