--- a/back/package.json
+++ b/back/package.json
@@ -28,8 +28,10 @@
     "pg": "^8.16.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.15.31",
     "globals": "^16.2.0",
     "prisma": "^6.9.0",
