Adicione Index.ts como ponto de entrada

--- a/back/package.json
+++ b/back/package.json
@@ -2,11 +2,11 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "src/modules/router/app.ts",
+  "main": "src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsx watch src/modules/router/app.ts",
-    "dev:main": "tsx watch src/modules/router/app.ts",
+    "dev": "tsx watch src/index.ts",
+    "dev:main": "tsx watch src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
